/**
* see:
* https://developers.google.com/protocol-buffers/docs/proto3
*/

syntax = "proto3";

package user;

service UserService {
  rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse);
}

message GetUserByIdRequest {
  string userId = 1;
}

message GetUserByIdResponse {
  optional User user = 1;
}

message User {
  string userId = 1;
  string username = 2;
}
